SemanticAnalyzer/Lovelace.jj
PARSER_BEGIN(Lovelace)
import java.io.*;
import java.util.ArrayList;
import ast.*; 

public class Lovelace {

  public static void main(String args[]) throws ParseException,IOException {
    try {
        Lovelace analisador = new Lovelace(new FileInputStream(args[0]));
        Prog arv = analisador.Lovelace(); 
        
        System.out.println("Analise sintatica concluida com sucesso.");
        System.out.println("-----------------------------------------");
        
        ArvoreDebug.print(arv);

        System.out.println("-----------------------------------------\n");
        GeraC gerador = new GeraC();
        gerador.codegen(arv);

        GeraArquivoC ger = new GeraArquivoC();
        String nomeArquivoC = args[0].replace(".lov", ".c");
        ger.codegen(arv, nomeArquivoC);


        
    } catch (ParseException e) {
        System.err.println("Erro sintatico: " + e.getMessage());
    } catch (FileNotFoundException e) {
        System.err.println("Arquivo nao encontrado: " + args[0]);
    }
  }
}
PARSER_END(Lovelace)

SKIP :
{
  " " | "\t" | "\n" | "\r"
}

TOKEN :
{
  <MAIN: "main">
| <LET: "let">
| <APAR: "(">
| <FPAR: ")">  
| <BEGIN: "begin">
| <END: "end">
| <PV: ";">
| <VIRGULA: ",">
| <FLOAT: "Float">
| <BOOL: "Bool">
| <VOID: "Void">
| <ATR: ":=">
| <PRINT: "print">
| <IF: "if">
| <WHILE: "while">
| <RETURN: "return">
| <SOMA: "+">
| <SUB: "-">
| <DIV: "/">
| <MULT: "*">
| <AND: "&&">
| <OR: "||">
| <MAIOR: ">">
| <MENOR: "<">
| <IGUAL: "==">
| <READ: "read">
| <TRUE: "true">
| <FALSE: "false">
| <DEF: "def">
}

TOKEN :
{
  <NUMLITERAL: (["0"-"9"])+ ( "." (["0"-"9"])+ )? ( "E" (["+","-"])? (["0"-"9"])+ )? >
| < ID: ["a"-"z","A"-"Z"] ( ["a"-"z","A"-"Z","0"-"9"])* ( ["_"] ( ["a"-"z","A"-"Z","0"-"9"])*)*>
}

/* * LOVELACE -> MAIN FUNC
 * Cria a raiz do programa (Prog) contendo o Main e a lista de Funções
 */
Prog Lovelace() :
{
    Main main = null; 
    ArrayList<Fun> funs = null;
}
{
    main=Main() 
    funs=Func() 
    { return new Prog(main, funs); }
    <EOF>
}

/* * MAIN -> "main" "(" ")" "begin" VARDECL SEQCOMANDOS "end" 
 * Retorna o objeto Main preenchido
 */
Main Main() :
{
    ArrayList<VarDecl> vars = new ArrayList<VarDecl>();
    ArrayList<Comando> coms = new ArrayList<Comando>();
}
{
    <MAIN> <APAR> <FPAR> <BEGIN>
    VarDecl(vars)       // Preenche a lista de variáveis
    SeqComandos(coms)   // Preenche a lista de comandos
    <END>
    
    { return new Main(vars, coms); } 
}

/* * VARDECL -> ( "let" TIPO ID ";" )* * Preenche a lista passada por parâmetro
 */
void VarDecl(ArrayList<VarDecl> vars) :
{
    Token tId;
    String tipo;
}
{
    (
      <LET> 
      tipo=Tipo() 
      tId=<ID> 
      <PV>
      { vars.add(new VarDecl(tipo, tId.image)); }
    )*
}

/* TIPO -> "Float" | "Bool" | "Void" */
String Tipo() :
{ Token t; }
{
    ( t=<FLOAT> | t=<BOOL> | t=<VOID> )
    { return t.image; }
}

/* * SEQCOMANDOS -> ( COMANDO )* * Preenche a lista de comandos passada por parâmetro
 */
void SeqComandos(ArrayList<Comando> coms) :
{ Comando c; }
{
    (
        c=Comando() 
        { coms.add(c); }
    )*
}

/* * COMANDO: Trata Atribuição, Chamada, If, While, Print, Return
 * Retorna um objeto genérico 'Comando'
 */
Comando Comando() :
{
    Token t; // Usado para capturar a linha e o texto
    Exp e = null;
    ArrayList<Exp> args = null;
    ArrayList<Comando> bloco = null;
    String varNome;
}
{
    // Comandos que começam com ID (Atribuição ou Chamada de Função)
    t=<ID> 
    (
        // Atribuição: ID := Exp ;
        ( <ATR> e=Exp() <PV> )
        { return new CAtribuicao(t.beginLine, t.image, e); }
        
        |
        // Chamada de Função (procedure): ID ( args ) ;
        ( <APAR> [ args=ListaExp() ] <FPAR> <PV> )
        { 
            if (args == null) args = new ArrayList<Exp>();
            return new CChamadaFun(t.beginLine, t.image, args);
        }
    )
    
    |
    // Caso IF
    t=<IF> e=Exp() <BEGIN> 
    { bloco = new ArrayList<Comando>(); } 
    SeqComandos(bloco) 
    <END> <PV>
    { return new CIf(t.beginLine, e, bloco); }

    |
    // Caso WHILE
    t=<WHILE> e=Exp() <BEGIN> 
    { bloco = new ArrayList<Comando>(); } 
    SeqComandos(bloco) 
    <END> <PV>
    { return new CWhile(t.beginLine, e, bloco); }

    |
    // Caso PRINT
    t=<PRINT> e=Exp() <PV>
    { return new CPrint(t.beginLine, e); }

    |
    // Caso RETURN
    t=<RETURN> e=Exp() <PV>
    { return new CReturn(t.beginLine, e); }
}

/* * EXP -> "(" EXP OP EXP ")" | FATOR 
 * Retorna um nó de Expressão
 */
Exp Exp() :
{
    Exp e1, e2;
    String op;
    Exp result;
}
{
    // Expressão binária com parenteses obrigatórios (conforme sua gramática original)
    ( <APAR> e1=Exp() op=Op() e2=Exp() <FPAR> )
    { return new EOpExp(op, e1, e2); } // Cria expressão de operação
    |
    // Fator simples (número, variável, boolean)
    result=Fator()
    { return result; }
}

/* * FATOR -> ID | ID(args) | Num | True | False 
 */
Exp Fator() :
{
    Token t;
    ArrayList<Exp> args = null;
}
{
    // Identificador (Variável ou Chamada de Função dentro de expressão)
    t=<ID>
    ( 
        // Se tiver '(', é chamada de função retornando valor
        ( <APAR> [ args=ListaExp() ] <FPAR> )
        { 
            if (args == null) args = new ArrayList<Exp>();
            return new EChamadaFun(t.image, args); 
        }
        |
        // Se não, é apenas uma variável
        { return new EVar(t.image); } 
    )
    |
    // Literal Numérico
    t=<NUMLITERAL>
    { return new EFloat(Float.parseFloat(t.image)); } //  Converte String para float
    |
    <TRUE>
    { return new ETrue(); } 
    |
    <FALSE>
    { return new EFalse(); } 
}

/* OP -> Retorna a string do operador */
String Op() :
{ Token t; }
{
    ( t=<SOMA> | t=<SUB> | t=<MULT> | t=<DIV> | t=<AND> | t=<OR> | t=<MENOR> | t=<MAIOR> | t=<IGUAL> )
    { return t.image; }
}

/* * LISTAEXP -> EXP ( "," EXP )* * Retorna uma lista de expressões (usado em argumentos de chamada)
 */
ArrayList<Exp> ListaExp() :
{
    ArrayList<Exp> lista = new ArrayList<Exp>();
    Exp e;
}
{
    e=Exp() { lista.add(e); } 
    ( <VIRGULA> e=Exp() { lista.add(e); } )*
    { return lista; }
}

/* * FUNC -> ( "def" ... )* * Retorna a lista de funções declaradas no programa
 */
ArrayList<Fun> Func() :
{
    ArrayList<Fun> funs = new ArrayList<Fun>();
    String tipoRetorno;
    Token id;
    ArrayList<ParamFormalFun> params = null; //  Classe correta para parâmetros
    ArrayList<VarDecl> vars;
    ArrayList<Comando> body;
}
{
    (
        <DEF> tipoRetorno=Tipo() id=<ID> <APAR> [ params=ListaArg() ] <FPAR> 
        <BEGIN> 
        { 
            // Instancia as listas locais para cada função
            vars = new ArrayList<VarDecl>(); 
            body = new ArrayList<Comando>();
            if (params == null) params = new ArrayList<ParamFormalFun>();
        }
        VarDecl(vars) 
        SeqComandos(body) 
        <END>
        
        // Adiciona a nova função na lista
        { funs.add(new Fun(id.image, params, tipoRetorno, vars, body)); } // 
    )*
    
    { return funs; }
}

/* * LISTAARG -> TIPO ID ( "," TIPO ID )*
 * Retorna lista de parametros formais
 */
ArrayList<ParamFormalFun> ListaArg() :
{
    ArrayList<ParamFormalFun> lista = new ArrayList<ParamFormalFun>();
    String tipo;
    Token id;
}
{
    tipo=Tipo() id=<ID> 
    { lista.add(new ParamFormalFun(tipo, id.image)); } // 
    
    ( 
      <VIRGULA> tipo=Tipo() id=<ID> 
      { lista.add(new ParamFormalFun(tipo, id.image)); } 
    )*
    
    { return lista; }
}
