SemanticAnalyzer/Lovelace.java
/* Generated By:JavaCC: Do not edit this line. Lovelace.java */
import java.io.*;
import java.util.ArrayList;
import ast.*;

public class Lovelace implements LovelaceConstants {

  public static void main(String args[]) throws ParseException,IOException {
    try {
        Lovelace analisador = new Lovelace(new FileInputStream(args[0]));
        Prog arv = analisador.Lovelace();

        System.out.println("Analise sintatica concluida com sucesso.");
        System.out.println("-----------------------------------------");

        ArvoreDebug.print(arv);
        GeraC gerador = new GeraC();
        gerador.codegen(arv);

    } catch (ParseException e) {
        System.err.println("Erro sintatico: " + e.getMessage());
    } catch (FileNotFoundException e) {
        System.err.println("Arquivo nao encontrado: " + args[0]);
    }
  }

/* * LOVELACE -> MAIN FUNC
 * Cria a raiz do programa (Prog) contendo o Main e a lista de Funções
 */
  static final public Prog Lovelace() throws ParseException {
    Main main = null;
    ArrayList<Fun> funs = null;
    main = Main();
    funs = Func();
      {if (true) return new Prog(main, funs);}
    jj_consume_token(0);
    throw new Error("Missing return statement in function");
  }

/* * MAIN -> "main" "(" ")" "begin" VARDECL SEQCOMANDOS "end" 
 * Retorna o objeto Main preenchido
 */
  static final public Main Main() throws ParseException {
    ArrayList<VarDecl> vars = new ArrayList<VarDecl>();
    ArrayList<Comando> coms = new ArrayList<Comando>();
    jj_consume_token(MAIN);
    jj_consume_token(APAR);
    jj_consume_token(FPAR);
    jj_consume_token(BEGIN);
    VarDecl(vars);
    SeqComandos(coms);
    jj_consume_token(END);
      {if (true) return new Main(vars, coms);}
    throw new Error("Missing return statement in function");
  }

/* * VARDECL -> ( "let" TIPO ID ";" )* * Preenche a lista passada por parâmetro
 */
  static final public void VarDecl(ArrayList<VarDecl> vars) throws ParseException {
    Token tId;
    String tipo;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LET:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(LET);
      tipo = Tipo();
      tId = jj_consume_token(ID);
      jj_consume_token(PV);
        vars.add(new VarDecl(tipo, tId.image));
    }
  }

/* TIPO -> "Float" | "Bool" | "Void" */
  static final public String Tipo() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FLOAT:
      t = jj_consume_token(FLOAT);
      break;
    case BOOL:
      t = jj_consume_token(BOOL);
      break;
    case VOID:
      t = jj_consume_token(VOID);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

/* * SEQCOMANDOS -> ( COMANDO )* * Preenche a lista de comandos passada por parâmetro
 */
  static final public void SeqComandos(ArrayList<Comando> coms) throws ParseException {
  Comando c;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRINT:
      case IF:
      case WHILE:
      case RETURN:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      c = Comando();
          coms.add(c);
    }
  }

/* * COMANDO: Trata Atribuição, Chamada, If, While, Print, Return
 * Retorna um objeto genérico 'Comando'
 */
  static final public Comando Comando() throws ParseException {
    Token t; // Usado para capturar a linha e o texto
    Exp e = null;
    ArrayList<Exp> args = null;
    ArrayList<Comando> bloco = null;
    String varNome;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      // Comandos que começam com ID (Atribuição ou Chamada de Função)
          t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATR:
        jj_consume_token(ATR);
        e = Exp();
        jj_consume_token(PV);
          {if (true) return new CAtribuicao(t.beginLine, t.image, e);}
        break;
      case APAR:
        jj_consume_token(APAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case APAR:
        case TRUE:
        case FALSE:
        case NUMLITERAL:
        case ID:
          args = ListaExp();
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        jj_consume_token(FPAR);
        jj_consume_token(PV);
            if (args == null) args = new ArrayList<Exp>();
            {if (true) return new CChamadaFun(t.beginLine, t.image, args);}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case IF:
      // Caso IF
          t = jj_consume_token(IF);
      e = Exp();
      jj_consume_token(BEGIN);
      bloco = new ArrayList<Comando>();
      SeqComandos(bloco);
      jj_consume_token(END);
      jj_consume_token(PV);
      {if (true) return new CIf(t.beginLine, e, bloco);}
      break;
    case WHILE:
      // Caso WHILE
          t = jj_consume_token(WHILE);
      e = Exp();
      jj_consume_token(BEGIN);
      bloco = new ArrayList<Comando>();
      SeqComandos(bloco);
      jj_consume_token(END);
      jj_consume_token(PV);
      {if (true) return new CWhile(t.beginLine, e, bloco);}
      break;
    case PRINT:
      // Caso PRINT
          t = jj_consume_token(PRINT);
      e = Exp();
      jj_consume_token(PV);
      {if (true) return new CPrint(t.beginLine, e);}
      break;
    case RETURN:
      // Caso RETURN
          t = jj_consume_token(RETURN);
      e = Exp();
      jj_consume_token(PV);
      {if (true) return new CReturn(t.beginLine, e);}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* * EXP -> "(" EXP OP EXP ")" | FATOR 
 * Retorna um nó de Expressão
 */
  static final public Exp Exp() throws ParseException {
    Exp e1, e2;
    String op;
    Exp result;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
      jj_consume_token(APAR);
      e1 = Exp();
      op = Op();
      e2 = Exp();
      jj_consume_token(FPAR);
      {if (true) return new EOpExp(op, e1, e2);}
      break;
    case TRUE:
    case FALSE:
    case NUMLITERAL:
    case ID:
      // Fator simples (número, variável, boolean)
          result = Fator();
      {if (true) return result;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* * FATOR -> ID | ID(args) | Num | True | False 
 */
  static final public Exp Fator() throws ParseException {
    Token t;
    ArrayList<Exp> args = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      // Identificador (Variável ou Chamada de Função dentro de expressão)
          t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case APAR:
        jj_consume_token(APAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case APAR:
        case TRUE:
        case FALSE:
        case NUMLITERAL:
        case ID:
          args = ListaExp();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        jj_consume_token(FPAR);
            if (args == null) args = new ArrayList<Exp>();
            {if (true) return new EChamadaFun(t.image, args);}
        break;
      default:
        jj_la1[8] = jj_gen;
          {if (true) return new EVar(t.image);}
      }
      break;
    case NUMLITERAL:
      // Literal Numérico
          t = jj_consume_token(NUMLITERAL);
      {if (true) return new EFloat(Float.parseFloat(t.image));}
      break;
    case TRUE:
      jj_consume_token(TRUE);
      {if (true) return new ETrue();}
      break;
    case FALSE:
      jj_consume_token(FALSE);
      {if (true) return new EFalse();}
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* OP -> Retorna a string do operador */
  static final public String Op() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SOMA:
      t = jj_consume_token(SOMA);
      break;
    case SUB:
      t = jj_consume_token(SUB);
      break;
    case MULT:
      t = jj_consume_token(MULT);
      break;
    case DIV:
      t = jj_consume_token(DIV);
      break;
    case AND:
      t = jj_consume_token(AND);
      break;
    case OR:
      t = jj_consume_token(OR);
      break;
    case MENOR:
      t = jj_consume_token(MENOR);
      break;
    case MAIOR:
      t = jj_consume_token(MAIOR);
      break;
    case IGUAL:
      t = jj_consume_token(IGUAL);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

/* * LISTAEXP -> EXP ( "," EXP )* * Retorna uma lista de expressões (usado em argumentos de chamada)
 */
  static final public ArrayList<Exp> ListaExp() throws ParseException {
    ArrayList<Exp> lista = new ArrayList<Exp>();
    Exp e;
    e = Exp();
              lista.add(e);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      jj_consume_token(VIRGULA);
      e = Exp();
                          lista.add(e);
    }
      {if (true) return lista;}
    throw new Error("Missing return statement in function");
  }

/* * FUNC -> ( "def" ... )* * Retorna a lista de funções declaradas no programa
 */
  static final public ArrayList<Fun> Func() throws ParseException {
    ArrayList<Fun> funs = new ArrayList<Fun>();
    String tipoRetorno;
    Token id;
    ArrayList<ParamFormalFun> params = null; //  Classe correta para parâmetros
    ArrayList<VarDecl> vars;
    ArrayList<Comando> body;
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DEF:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      jj_consume_token(DEF);
      tipoRetorno = Tipo();
      id = jj_consume_token(ID);
      jj_consume_token(APAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FLOAT:
      case BOOL:
      case VOID:
        params = ListaArg();
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      jj_consume_token(FPAR);
      jj_consume_token(BEGIN);
            // Instancia as listas locais para cada função
            vars = new ArrayList<VarDecl>();
            body = new ArrayList<Comando>();
            if (params == null) params = new ArrayList<ParamFormalFun>();
      VarDecl(vars);
      SeqComandos(body);
      jj_consume_token(END);
          funs.add(new Fun(id.image, params, tipoRetorno, vars, body));
    }
      {if (true) return funs;}
    throw new Error("Missing return statement in function");
  }

/* * LISTAARG -> TIPO ID ( "," TIPO ID )*
 * Retorna lista de parametros formais
 */
  static final public ArrayList<ParamFormalFun> ListaArg() throws ParseException {
    ArrayList<ParamFormalFun> lista = new ArrayList<ParamFormalFun>();
    String tipo;
    Token id;
    tipo = Tipo();
    id = jj_consume_token(ID);
      lista.add(new ParamFormalFun(tipo, id.image));
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_5;
      }
      jj_consume_token(VIRGULA);
      tipo = Tipo();
      id = jj_consume_token(ID);
        lista.add(new ParamFormalFun(tipo, id.image));
    }
      {if (true) return lista;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public LovelaceTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[15];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,0xe000,0x1e0000,0x80000080,0x10080,0x1e0000,0x80000080,0x80000080,0x80,0x80000000,0x3fe00000,0x1000,0x0,0xe000,0x1000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x8,0xd,0x0,0x8,0xd,0xd,0x0,0xd,0x0,0x0,0x2,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public Lovelace(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Lovelace(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new LovelaceTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Lovelace(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new LovelaceTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Lovelace(LovelaceTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(LovelaceTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[36];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 15; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 36; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
